# egui_l20n

./: Cargo.toml  README.adoc  README.md
src/: context.rs  lib.rs  localization.rs  response.rs
src/ui/: locale_button.rs  mod.rs
