[package]
name = "egui_l20n"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.0", default-features = false }
egui = { version = "0.31.0", default-features = false }
egui-phosphor = "0.9.0"
fluent = "0.16.1"
fluent_content = "0.0.5"
tracing = "0.1.41"
unic-langid = { version = "0.9.5", features = ["macros"] }

[features]
default = []
macros = ["unic-langid/macros"]
