[package]
name = "egui_l20n"
version = "0.3.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", default-features = false }
egui = { version = "0.33.0", default-features = false }
egui-phosphor = "0.10.0"
fluent = "0.16.1"
fluent_content = "0.0.5"
indexmap = "2.12.0"
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["macros"] }

[features]
default = []
macros = ["unic-langid/macros"]
