[package]
name = "egui_l20n"
version = "0.4.2"
edition = "2024"

[dependencies]
eframe = { version = "0.33.2", default-features = false }
egui = { version = "0.33.2", default-features = false }
egui-phosphor = "0.11.0"
fluent = "0.17.0"
fluent_content = { git = "https://github.com/kgv/fluent_content" }
indexmap = "2.12.1"
tracing = "0.1.43"
unic-langid = { version = "0.9.6", features = ["macros"] }

# fluent_content = "0.0.5"

[features]
default = []
macros = ["unic-langid/macros"]
